--- a/DgtlCrfts/style.css
+++ b/DgtlCrfts/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .content {
-    width: 70%;
+    width: 65%;
     margin: 0 auto;
 }
 
@@ -13,17 +13,27 @@ body {
 .header {
     background-image: url("img/atl.png");
     background-repeat: no-repeat;
+    height: 475px;
+    color: white;
+    position: relative;
 }
 
 
 ul {
     list-style-type: none;
-    margin: 0;
+    position: absolute;
+    right: 150px;
+    font-size: .8em;
+}
+
+ul li {
+    display: inline;
+    padding: 1em;
 }
 
 ul li a {
     text-decoration: none;
-    color: #868686;
+    color: rgba(255,255,255,.5);
 }
 
 a:hover {
@@ -31,9 +41,51 @@ a:hover {
     text-decoration: underline;
 }
 
+.logo {
+    width: 100%;
+    margin: 0 auto;
+    position: absolute;
+    top: 26%;
+}
+
+.insidelogo {
+    position: relative;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+img {
+    width: 200px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+h1 {
+    font-weight: 300;
+    font-size: 4em;
+    margin: 0;
+    padding: 0;
+}
+
+h3 {
+    position: relative;
+    font-weight: lighter;
+    font-size: 1.1em;
+    color: rgba(255,255,255,.5);
+    width: 300px;
+    text-align: center;
+    left: 90px;
+}
+
 .arrow {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: 48%;
+    bottom: 15px;
     border: solid white;
-    border-width: 0 2px 2px 0;
+    border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 3px;
     transform: rotate(45deg);
